<resources>
    <string name="app_name">ContactList</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="contact_image">Contact Image</string>
    <string name="contact_list">Contact List</string>
    <string name="add_contact">Add Contact</string>
</resources>