<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="50dp"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Contact Details" />

    <!-- Name -->
    <TextView
        android:id="@+id/detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Phone -->
    <TextView
        android:id="@+id/detail_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email -->
    <TextView
        android:id="@+id/detail_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/detail_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

